kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
  namespace: microservices
spec:
  selector:
    app: main-service
  ports:
  - port: 80
    targetPort: 8080
---


apiVersion: v1
kind: Service
metadata:
  name: feeds-service
  namespace: microservices
spec:
  selector:
    app: feeds-service
  ports:
  - port: 80
    targetPort: 8081
---


apiVersion: v1
kind: Service
metadata:
  name: marketplace-service
  namespace: microservices
spec:
  selector:
    app: marketplace-service
  ports:
  - port: 80
    targetPort: 8082
---
